# upsc-bench

./: .env.example  .gitignore  CLAUDE.md  DATA_SOURCES.md  README.md  download_pdfs.sh  pyproject.toml
benchmark/: common.py  db.py  grader.py  mains_runner.py  mains_scorer.py  mains_solver.py  runner.py  scorer.py  solver.py
config/: claude_opus.yaml  cutoffs.yaml  gemini_3_flash.yaml  gemini_3_pro.yaml  gemini_flash.yaml  gpt5.yaml  gpt5_4.yaml  judge.yaml  judge_prompt.txt  mains_claude_opus.yaml  mains_gemini_3_flash.yaml  mains_gemini_3_pro.yaml  mains_gemini_flash.yaml  mains_gpt5.yaml  mains_gpt5_4.yaml  models.yaml
data/: rank_mapping.json
data/answer_keys/: csat_2024.json  csat_2025.json  gs1_2024.json  (+1 more)
pipeline/: build_dataset.py  extract_pdf.py  merge_answer_keys.py  structure_questions.py  validate_dataset.py
results/: leaderboard.json  mains_grading_input.json  mains_grading_input_gpt5_4.json
scripts/: add_2025_questions.py  build_arena_data.py  build_flash_solo_batches.py  build_mains_questions.py  build_regrade_batches.py  clean_gs1_2025.py  combine_chunks.py  combine_results.py  compute_calibration_metrics.py  diff_dataset.py  generate_leaderboard.py  grade_calibration.py  grade_mains.py  merge_all_mains.py  merge_and_build.py  merge_answer_keys.py  merge_answers.py  merge_regrade.py  prepare_flash_grading.py  render_pages.py  run_2025.sh  scrape_coaching_answers.py  self_eval.py  validate_extraction.py
tests/: conftest.py  test_common.py  test_db.py  test_grader.py  test_mains_scorer.py  test_scorer.py
web/: package-lock.json  package.json
(+237 files in other folders)
